# smart-age

.github/workflows/: ci.yml
backend/: package.json
contracts/: Cargo.toml
contracts/src/: lib.rs  test.rs
frontend/: package.json
